...
                style: TextStyle(color: Theme.of(context).colorScheme.outline),
              ),
            ),
          const Divider(height: 40),
          ListTile(
            leading: const Icon(Icons.logout),
            title: const Text('Se déconnecter'),
            onTap: () => ref.read(authNotifierProvider.notifier).signOut(),
          ),
          if (isDemoMode)
            Padding(
              padding: const EdgeInsets.only(top: 16),
              child: Text(
...
